feat: split required pack.files into RequiredPack, refactor: hide DefaultPack and RequiredPack & clear old hash-packs