@@ -3,18 +3,15 @@ package io.th0rgal.oraxen.pack;
 import com.google.gson.JsonParser;
 import io.th0rgal.oraxen.OraxenPlugin;
 import io.th0rgal.oraxen.config.Settings;
+import io.th0rgal.oraxen.utils.FileUtil;
 import io.th0rgal.oraxen.utils.OraxenYaml;
 import io.th0rgal.oraxen.utils.VersionUtil;
 import io.th0rgal.oraxen.utils.logs.Logs;
 import org.apache.commons.lang3.StringUtils;
 import org.bukkit.configuration.file.YamlConfiguration;
 
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
+import java.io.*;
 import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 import java.nio.file.Path;
@@ -23,6 +20,18 @@ import java.util.zip.ZipInputStream;
 import java.util.zip.ZipOutputStream;
 
 public class PackDownloader {
+
+    public static void downloadRequiredPack() {
+        if (VersionUtil.isLeaked()) return;
+
+        String hash = checkPackHash("RequiredPack", "");
+        Path zipPath = PackGenerator.externalPacks.resolve("RequiredPack_" + hash + ".zip");
+        String fileUrl = "https://api.github.com/repos/oraxen/RequiredPack/zipball/main";
+
+        removeOldHashPack("RequiredPack", hash);
+        if (zipPath.toFile().exists() || zipPath.resolveSibling("RequiredPack_" + hash).toFile().exists()) return;
+        downloadPackFromUrl(fileUrl, "", zipPath);
+    }
 
     public static void downloadDefaultPack() {
         Logs.logInfo("Downloading default resourcepack...");
@@ -40,56 +49,18 @@ public class PackDownloader {
                 YamlConfiguration accessYaml = OraxenYaml.loadConfiguration(accessReader);
                 String fileUrl = "https://api.github.com/repos/oraxen/DefaultPack/zipball/main";
                 String token = accessYaml.getString("token", "");
-                String hash = checkDefaultPackHash(token);
+                String hash = checkPackHash("DefaultPack", token);
                 Path zipPath = PackGenerator.externalPacks.resolve("DefaultPack_" + hash + ".zip");
 
+                removeOldHashPack("DefaultPack", hash);
                 if (zipPath.toFile().exists() || zipPath.resolveSibling("DefaultPack_" + hash).toFile().exists()) {
                     Logs.logSuccess("Skipped downloading DefaultPack as it is up to date!");
                     return;
                 }
 
-                try {
-                    HttpURLConnection connection = (HttpURLConnection) URI.create(fileUrl).toURL().openConnection();
-                    connection.setRequestProperty("Accept", "application/vnd.github+json");
-                    connection.setRequestProperty("Authorization", !token.isEmpty() ? "Bearer " + token : "");
-                    connection.setRequestProperty("X-GitHub-Api-Version", "2022-11-28");
+                downloadPackFromUrl(fileUrl, token, zipPath);
 
-                    // Open input stream from the connection
-                    ZipInputStream zis = new ZipInputStream(connection.getInputStream());
-
-                    // Save the file to local disk
-                    try (FileOutputStream fos = new FileOutputStream(zipPath.toString())) {
-                        ZipOutputStream zos = new ZipOutputStream(fos);
-                        ZipEntry entry = zis.getNextEntry();
-
-                        while (entry != null) {
-                            if (!entry.isDirectory()) {
-                                zos.putNextEntry(new ZipEntry(StringUtils.substringAfter(entry.getName(), "/")));
-
-                                byte[] buffer = new byte[1024];
-                                int bytesRead;
-                                while ((bytesRead = zis.read(buffer)) > 0) {
-                                    zos.write(buffer, 0, bytesRead);
-                                }
-
-                            }
-
-                            zis.closeEntry();
-                            entry = zis.getNextEntry();
-                        }
-
-                        zos.close();
-                    }
-                    zis.close();
-                    connection.disconnect();
-
-                    accessStream.close();
-                } catch (IOException e) {
-                    if (Settings.DEBUG.toBool()) e.printStackTrace();
-                    else Logs.logWarning(e.getMessage());
-                    Logs.logError("Failed to download Oraxen pack...");
-                    Logs.logError("Please contact the developer!", true);
-                }
+                accessStream.close();
             } catch (Exception e) {
                 if (Settings.DEBUG.toBool()) e.printStackTrace();
                 else Logs.logWarning(e.getMessage());
@@ -99,9 +70,59 @@ public class PackDownloader {
         }
     }
 
-    private static String checkDefaultPackHash(String token) throws MalformedURLException {
+    private static void removeOldHashPack(String filePrefix, String newHash) {
+        FileUtil.listFiles(PackGenerator.externalPacks.toFile()).stream()
+                .filter(f -> f.getName().startsWith(filePrefix) && !f.getName().endsWith(newHash + ".zip"))
+                .forEach(File::delete);
+    }
+
+    private static void downloadPackFromUrl(String fileUrl, String token, Path zipPath) {
         try {
-            URL url = new URL("https://api.github.com/repos/oraxen/DefaultPack/commits");
+            HttpURLConnection connection = (HttpURLConnection) URI.create(fileUrl).toURL().openConnection();
+            connection.setRequestProperty("Accept", "application/vnd.github+json");
+            connection.setRequestProperty("Authorization", !token.isEmpty() ? "Bearer " + token : "");
+            connection.setRequestProperty("X-GitHub-Api-Version", "2022-11-28");
+
+            // Open input stream from the connection
+            ZipInputStream zis = new ZipInputStream(connection.getInputStream());
+
+            // Save the file to local disk
+            try (FileOutputStream fos = new FileOutputStream(zipPath.toString())) {
+                ZipOutputStream zos = new ZipOutputStream(fos);
+                ZipEntry entry = zis.getNextEntry();
+
+                while (entry != null) {
+                    if (!entry.isDirectory()) {
+                        zos.putNextEntry(new ZipEntry(StringUtils.substringAfter(entry.getName(), "/")));
+
+                        byte[] buffer = new byte[1024];
+                        int bytesRead;
+                        while ((bytesRead = zis.read(buffer)) > 0) {
+                            zos.write(buffer, 0, bytesRead);
+                        }
+
+                    }
+
+                    zis.closeEntry();
+                    entry = zis.getNextEntry();
+                }
+
+                zos.close();
+                FileUtil.setHidden(zipPath);
+            }
+            zis.close();
+            connection.disconnect();
+        } catch (IOException e) {
+            if (Settings.DEBUG.toBool()) e.printStackTrace();
+            else Logs.logWarning(e.getMessage());
+            Logs.logError("Failed to download Oraxen pack...");
+            Logs.logError("Please contact the developer!", true);
+        }
+    }
+
+    private static String checkPackHash(String repo, String token) {
+        try {
+            URL url = URI.create("https://api.github.com/repos/oraxen/" + repo + "/commits").toURL();
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
 
             connection.setRequestMethod("GET");
